--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/SK/Maps/Test.Test
 EditorStartupMap=/Game/SK/Maps/Test.Test
-GlobalDefaultGameMode=/Game/SK/Blueprints/Core/BP_GameMode.BP_GameMode_C
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/SK/Maps/Test.Test
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/SK/Blueprints/Core/Game/BP_GameMode.BP_GameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
