begin ai logic(It's not working yet)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -26,3 +26,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/SK")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="SKGameModeBase")
 
+
+[CoreRedirects]
++StructRedirects=(OldName="/Script/SK.SquareInfo",NewName="/Script/SK.SquareInfo")
++ClassRedirects=(OldName="/Script/SK.MyClass",NewName="/Script/SK.ChessBoardInfo")
++ClassRedirects=(OldName="/Script/SK.UChessBoardInfo",NewName="/Script/SK.ChessBoardInfo")
++ClassRedirects=(OldName="/Script/SK.ChessPieceInfo",NewName="/Script/SK.ChessPieceInfo")
