--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,3 +3,6 @@
 ProjectID=CE2F8F3A4E7AE39FF64F9CACCDA8828E
 ProjectName=Spearlight_King
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+FullRebuild=True
+
