--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,6 +32,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ClassRedirects=(OldName="/Script/SK.MyClass",NewName="/Script/SK.ChessBoardInfo")
 +ClassRedirects=(OldName="/Script/SK.UChessBoardInfo",NewName="/Script/SK.ChessBoardInfo")
 +ClassRedirects=(OldName="/Script/SK.ChessPieceInfo",NewName="/Script/SK.ChessPieceInfo")
++ClassRedirects=(OldName="/Script/SK.UKing",NewName="/Script/SK.King")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
