--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/SK/Maps/Test.Test
+GameDefaultMap=/Game/LawnMoverGame/Levels/MenuLevel.MenuLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/SK/Blueprints/Core/Game/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
