--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,3 +91,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
