settings window change

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/LawnMoverGame/Blueprints/Main/BP_GameInstance.BP_GameInstance_C
 GameDefaultMap=/Game/LawnMoverGame/Levels/MenuLevel.MenuLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/SK/Blueprints/Core/Game/BP_GameMode.BP_GameMode_C
