--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=CE2F8F3A4E7AE39FF64F9CACCDA8828E
-ProjectName=Spearlight_King
+ProjectName=I Checkmate Thee
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
