--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/SK/Maps/Test_2.Test_2
+EditorStartupMap=/Game/SK/Maps/Test.Test
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
