Added Sinematic Level, Animation StartGame

--- a/ICheckmateThee.uproject
+++ b/ICheckmateThee.uproject
@@ -21,6 +21,14 @@
 			"SupportedTargetPlatforms": [
 				"Win64"
 			]
+		},
+		{
+			"Name": "MovieRenderPipeline",
+			"Enabled": true
+		},
+		{
+			"Name": "MoviePipelineMaskRenderPass",
+			"Enabled": true
 		}
 	]
 }
