--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -96,6 +96,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
 r.CustomDepth=3
+r.Shadow.UnbuiltPreviewInGame=True
 
 [/Script/LuminRuntimeSettings.LuminRuntimeSettings]
 IconModelPath=(Path="Build/Lumin/Resources/Model")
