--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=I Checkmate Thee
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/SK/Maps/Test.Test
+EditorStartupMap=/Game/SK/Maps/Game.Game
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
