--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -99,8 +99,8 @@ r.CustomDepth=3
 r.Shadow.UnbuiltPreviewInGame=True
 
 [/Script/LuminRuntimeSettings.LuminRuntimeSettings]
-IconModelPath=(Path="Build/Lumin/Resources/Model")
-IconPortalPath=(Path="Build/Lumin/Resources/Portal")
+IconModelPath=(Path="")
+IconPortalPath=(Path="")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
