--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,7 +80,13 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Paused",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="Paused",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +ActionMappings=(ActionName="Paused",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Pause)
-+ActionMappings=(ActionName="Interaction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="CutsceneSkip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="CutsceneSkip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="CutsceneSkip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="CutsceneSkip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
++ActionMappings=(ActionName="CutsceneSkip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
++ActionMappings=(ActionName="CutsceneSkip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="CutsceneSkip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Pause)
 +AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=MouseY)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
