Added Level for HintMenu Renders

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -98,6 +98,7 @@ r.DefaultFeature.AutoExposure=False
 r.CustomDepth=3
 r.Shadow.UnbuiltPreviewInGame=True
 r.AllowGlobalClipPlane=True
+r.PostProcessing.PropagateAlpha=2
 
 [/Script/LuminRuntimeSettings.LuminRuntimeSettings]
 IconModelPath=(Path="")
