--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,6 +97,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 r.DefaultFeature.AutoExposure=False
 r.CustomDepth=3
 r.Shadow.UnbuiltPreviewInGame=True
+r.AllowGlobalClipPlane=True
+r.DefaultFeature.MotionBlur=False
 
 [/Script/LuminRuntimeSettings.LuminRuntimeSettings]
 IconModelPath=(Path="")
